# demo-assistant-mcp

./: .envrc  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md
src/demo_assistant_mcp/: __init__.py  server.py
src/demo_assistant_mcp/common/: __init__.py  demo_parser.py  demo_state.py  error_handling.py  logging.py
src/demo_assistant_mcp/tools/: demo_tools.py
tests/: conftest.py  test_conversational_orchestration.py  test_demo_assistant.py  test_logging.py  test_server_integration.py
tests/fixtures/: test_demo.md
