[project]
name = "demo-assistant-mcp"
version = "0.1.0"
description = "MCP server for orchestrating demo script execution with Copilot"
authors = [
    { name = "Jack Pines", email = "github@jackpines.info" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
demo-assistant-mcp = "demo_assistant_mcp.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_assistant_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []
