[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-assistant-mcp"
version = "0.1.0"
description = "MCP server for orchestrating demo script execution with Copilot"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Jack Pines", email = "github@jackpines.info" }
]
dependencies = [
    "actionable-errors>=0.1.0",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6,<7",
    "pytest-mock>=3.11.0",
    "ruff>=0.8,<1",
    "taskipy>=1.14,<2",
    "pre-commit>=4,<5",
]

[project.scripts]
demo-assistant-mcp = "demo_assistant_mcp.server:run"

[project.urls]
Repository = "https://github.com/grimlor/demo-assistant-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_assistant_mcp"]

# ---------------------------------------------------------------------------
# Taskipy
# ---------------------------------------------------------------------------
[tool.taskipy.tasks]
lint   = "uv run ruff check --fix src/ tests/"
format = "uv run ruff format src/ tests/"
type   = "uv run pyright src/ tests/"
test   = "uv run pytest tests/ -v"
cov    = "uv run pytest tests/ --cov=demo_assistant_mcp --cov-report=term-missing"
check  = "task lint && task type && task test"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["demo_assistant_mcp"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = [
    "E",        # pycodestyle errors
    "W",        # pycodestyle warnings
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
    "RUF",      # ruff-specific rules
    "PLC0415",  # import-outside-top-level
    "PLC2701",  # import-private-name (preview)
]
ignore = [
    "E501",  # line length (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["demo_assistant_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportPrivateUsage = false

# ---------------------------------------------------------------------------
# python-semantic-release
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = []
commit_message = "chore(release): {version}"
tag_format = "v{version}"
branch = "main"
build_command = ""
upload_to_pypi = false
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
